# robotaxi-openenv

./: .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.py  openenv.yaml  pyproject.toml  requirements.txt
env/: __init__.py  api.py  config.py  environment.py  models.py  utils.py
scripts/: demo.py  run_env.py
server/: app.py
tasks/: grader.py  task_easy.py  task_hard.py  task_medium.py
