[project]
name = "robotaxi-openenv"
version = "0.1.0"
description = "Robotaxi OpenEnv environment for OpenEnv Hackathon"
authors = [
    { name = "Arpit Mathur" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "numpy",
    "pillow",
    "openai"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
